dev/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  type: NodePort
  selector:
    app: rails-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 31000
